@@ -1,3 +1,7 @@
+2007-07-26  Marcus Meissner  <marcus@jet.franken.de>
+
+	* library.c: Merged MTP devices from libmtp.
+
 2007-07-18  Marcus Meissner  <marcus@jet.franken.de>
 
 	* ptp.c,ptp.h: Added PTP reset handling (from libmtp).
